request param validation
